# biosim_G07_sebastian_andreas

./: .gitignore  README.md  requirements.txt  setup.cfg  tox.ini
Exam/: oral_exam
doc/: Makefile  animals.rst  biosim_interface.rst  conf.py  examples.rst  geography.rst  index.rst  installations.rst  make.bat  map_iterator.rst
examples/: example_run.py  simple_island.py
src/biosim/: __init__.py  animals.py  geography.py  island_class.py  simulation.py
tests/: test_animal.py  test_animals.py  test_biosim_interface.py  test_geography.py  test_island_class.py
